clusters/MBP-von-Manfred/docker-desktop/monitoring/flux-tenant.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    toolkit.fluxcd.io/tenant: monitoring
  name: monitoring
